--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
 	"files.associations": {
 		"cub3d.h": "c",
 		"structs.h": "c",
-		"x.h": "c"
+		"x.h": "c",
+		"math.h": "c",
+		"fcntl.h": "c"
 	}
 }
