resolved a memory leak

--- a/includes/libft/Makefile
+++ b/includes/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: aconti <marvin@42.fr>                      +#+  +:+       +#+         #
+#    By: aconti <aconti@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/10/28 17:07:03 by aconti            #+#    #+#              #
-#    Updated: 2023/10/28 17:09:57 by aconti           ###   ########.fr        #
+#    Updated: 2024/10/09 11:26:20 by aconti           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,24 +16,24 @@ BONUS_SRCS = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_b
 MANDATORY_OBJS = ${MANDATORY_SRCS:.c=.o}
 BONUS_OBJS = ${BONUS_SRCS:.c=.o}
 HEADER = libft.h
-
+RED = '\033[0;91m'
+NONE = '\033[0m'
 all: ${NAME}
 
 ${NAME}: ${MANDATORY_OBJS}
-	ar rc ${NAME} ${MANDATORY_OBJS}
-	ranlib ${NAME}
-
+	@ar rc ${NAME} ${MANDATORY_OBJS}
+	@ranlib ${NAME}
 bonus: ${BONUS_OBJS} ${MANDATORY_OBJS}
-	ar rc ${NAME} ${BONUS_OBJS} ${MANDATORY_OBJS}
+	@ar rc ${NAME} ${BONUS_OBJS} ${MANDATORY_OBJS}
 
 %.o: %.c ${HEADER}
-	cc -Wall -Wextra -Werror -c $< -o $@
+	@cc -Wall -Wextra -Werror -c $< -o $@
 
 clean:
-	rm -f ${MANDATORY_OBJS} ${BONUS_OBJS}
+	@rm -f ${MANDATORY_OBJS} ${BONUS_OBJS}
 
 fclean: clean
-	rm -f ${NAME}
+	@rm -f ${NAME}
 
 re: fclean all
 
